--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apexearth/layout": "^0.4.4",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "user-input": "^1.5.0",
