--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "layout-editor",
+  "name": "@apexearth/layout-editor",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.base.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -p",
@@ -18,12 +18,8 @@
   "dependencies": {
     "@apexearth/layout": "^0.4.4",
     "mouse-event-offset": "^3.0.2",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "user-input": "^1.5.0",
-    "user-input-mapping": "^1.4.1",
-    "webpack": "^3.8.1",
-    "@apexearth/layout-draw": "latest"
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -39,6 +35,7 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "mocha": "^4.0.1",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1"
   }
 }
